--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -8,10 +8,10 @@
     min-height: calc(100vh - 3.5rem);
     display: flex;
     flex-direction: column;
-    max-width: 1920px;
+    max-width: var(--desktopWidth);
     margin: auto;
     margin-top: 3.5rem;
     gap: .5rem;
     box-sizing: border-box;
-    padding: .5rem;
+    padding: 1rem;
 }
