--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -25,7 +25,7 @@
     width: 100%;
     height: 1px;
     border: none;
-    background-color: var(--pink);
+    background-color: var(--blue);
     max-width: var(--tabletWidth);
 }
 
