--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -6,7 +6,7 @@
     font-weight: 300;
     font-size: 1.5rem;
     color: var(--white);
-    background-image: url('../../assets/images/background-2.png');
+    background-image: url('./images/background-2.png');
     background-size: 24rem;
     background-repeat: repeat;
     box-sizing: border-box;
