Members page complete

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -28,7 +28,7 @@
 }
 
 body {
-    background-image: url('./images/background.png');
+    background-image: url('images/background.png');
     background-size: 24rem;
     background-repeat: repeat;
 }
