--- a/src/pages/Members/members.css
+++ b/src/pages/Members/members.css
@@ -14,6 +14,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    gap: 1.5rem;
 }
 
 .header-txt {
@@ -34,7 +35,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 1rem;
+    gap: .5rem;
     box-sizing: border-box;
 }
 
