--- a/src/pages/Overview/overview.css
+++ b/src/pages/Overview/overview.css
@@ -11,18 +11,35 @@
     transition: var(--transition1);
 }
 
+.arrow-right,
+.arrow-left {
+    font-size: 20px;
+    vertical-align: middle;
+    transition: var(--transition1);
+}
+
+.arrow-left {
+    margin-left: .5rem;
+}
+
+.arrow-right {
+    margin-right: .5rem;
+}
+
 .overview-url {
     font-weight: 500;
+    font-size: 1.0625rem;
     display: flex;
     align-self: center;
+    align-items: center;
     flex-direction: column;
     text-decoration: none;
     color: var(--blue);
-    margin: .5rem;
-    padding: .25rem;
+    margin: .5rem .5rem;
+    padding: .25rem 0;
     border-radius: var(--borderRadius1);
     transition: var(--transition1);
-    background-color: var(--fadedLightBlue);
+    /* background-color: var(--fadedLightBlue); */
 
     &:hover {
         color: var(--pink);
@@ -30,6 +47,14 @@
         .url-underline {
             width: 100%;
             background-color: var(--pink);
+        }
+
+        .arrow-right {
+            margin-right: .375rem;
+        }
+
+        .arrow-left {
+            margin-left: .375rem;
         }
     }
 }
